--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
         <div class="navTop">
             <div class="navItem">
-                <img src="/img/sneakers.png" alt="" class="logoImg">
+                <img src="./img/sneakers.png" alt="" class="logoImg">
             </div>
             <div class="navItem">
                 <div class="search">
                     <input type="text" placeholder="Search here" class="searchBar">
-                    <img src="/img/search.png" width="20px" height="20px" alt="" class="searchImg">
+                    <img src="./img/search.png" width="20px" height="20px" alt="" class="searchImg">
                 </div> 
             </div>
             <div class="navItem">
@@ -40,7 +40,7 @@
     <div class="slider">
         <div class="sliderWrapper">
             <div class="sliderItem">
-                <img src="/img/air.png" alt="" class="sliderImg">
+                <img src="./img/air.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">AIR FORCE </br> NEW </br> SEASON</h1>
                 <h2 class="sliderPrice">$119</h2>
@@ -50,7 +50,7 @@
                 
             </div>
             <div class="sliderItem">
-                <img src="/img/jordan.png" alt="" class="sliderImg">
+                <img src="./img/jordan.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">AIR FORCE </br> NEW </br> SEASON</h1>
                 <h2 class="sliderPrice">$119</h2>
@@ -59,7 +59,7 @@
                 </a>
             </div>
             <div class="sliderItem">
-                <img src="/img/blazer.png" alt="" class="sliderImg">
+                <img src="./img/blazer.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">AIR FORCE </br> NEW </br> SEASON</h1>
                 <h2 class="sliderPrice">$119</h2>
@@ -68,7 +68,7 @@
                 </a>
             </div>
             <div class="sliderItem">
-                <img src="/img/crater.png" alt="" class="sliderImg">
+                <img src="./img/crater.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">AIR FORCE </br> NEW </br> SEASON</h1>
                 <h2 class="sliderPrice">$119</h2>
@@ -77,7 +77,7 @@
                 </a>
             </div>
             <div class="sliderItem">
-                <img src="/img/hippie.png" alt="" class="sliderImg">
+                <img src="./img/hippie.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">AIR FORCE </br> NEW </br> SEASON</h1>
                 <h2 class="sliderPrice">$119</h2>
